--- a/src/Component/DetailPage.css
+++ b/src/Component/DetailPage.css
@@ -24,6 +24,7 @@
 #boxContent {
     padding: 4%;
     display: flex;
+    max-width: 1400px;
 }
 #boxContent article:nth-of-type(1) {
     width: 45%;
