--- a/src/Component/MenuItem.css
+++ b/src/Component/MenuItem.css
@@ -17,9 +17,11 @@
   align-items: center;
   animation: gradient 10s ease infinite;
   border-radius: 10px;
+  position: relative;
 }
 .menu .menuItem h2 {
   padding-bottom: 1vh;
+  color: #262b46;
 }
 .menu .menuItem p {
   color: white;
@@ -28,8 +30,11 @@
 }
 .menu .menuItemLink {
   text-decoration: none;
-  color: #262b46;
-  font-size: 1.2em;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 .menu .menuItem:nth-of-type(1) {
   background: linear-gradient(-45deg, #87c4a4, #6fc3df, #8d82c4, #ec8d81);
