keyframes prefixes,text changes,media queries changes

--- a/src/Component/CocktailMenu.css
+++ b/src/Component/CocktailMenu.css
@@ -17,5 +17,7 @@
 @media (max-width: 767px){
     .cocktailMenu{
         grid-template-columns: 1fr; 
+        padding: 2em;
+        gap: 2em;
     }
 }
