--- a/src/Component/CocktailItem.css
+++ b/src/Component/CocktailItem.css
@@ -1,8 +1,5 @@
 .cocktailItem {
     text-transform: uppercase;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     border-radius: 10px;
 }
 .cocktailItem img {
@@ -10,10 +7,14 @@
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
-.cocktailItem h2 {
-    padding: 1vh 2%;
+.cocktailItem a {
+    text-decoration: none;
+}
+.cocktailItem .linkCocktailItem {
+    padding: 1vh 2% 2vh 2%;
     text-align: center;
     color: #262b46;
+    text-decoration: none;
 }
 .ginMenu .cocktailItem{
     background:  #6FC3DF;
@@ -29,4 +30,10 @@ background: #8D82C4;
 }
 .Non_AlcoholicMenu .cocktailItem{
     background: #8EA9E8;
+}
+
+@media (max-width: 767px){
+    .cocktailItem h2 {
+        font-size: 1.1em;
+    }
 }
