--- a/src/Component/Footer.css
+++ b/src/Component/Footer.css
@@ -18,6 +18,12 @@
   margin-bottom: 10vh;
   width: 70%;
 }
+#footer .footerText .lineBreak {
+  display: block;
+  padding-top: 3vh;
+  font-weight: 600;
+  font-size: 1.1em;
+}
 #footer .footerBottomWrap {
   color: black;
   background: #0d0f18;
@@ -49,7 +55,7 @@
   list-style-type: none;
 }
 #footer ul li {
-  padding: 0 20px;
+  padding: 0 1.4em;
 }
 #footer .footerLinksWrap {
   padding: 1vh 0;
@@ -65,7 +71,7 @@
   transition: all 0.5s ease;
 }
 #footer .footerLinksWrap a:hover {
-  color: #ec8d81;
+  color: #87c4a4;
 }
 #footer .socialIconsWrap {
   padding: 1vh 2%;
@@ -81,14 +87,38 @@
   color: white;
 }
 #footer .fa-twitter {
+  -webkit-animation: swing 1s infinite ease-in-out;
+  -moz-animation: swing 1s infinite ease-in-out;
+  -o-animation: swing 1s infinite ease-in-out;
   animation: swing 1s infinite ease-in-out;
+}
+
+/* social icons animation in different browsers */
+@-webkit-keyframes swing {
+  50% {
+    transform: rotate(25deg) translateX(-15%);
+  }
+}
+@-moz-keyframes swing {
+  50% {
+    transform: rotate(25deg) translateX(-15%);
+  }
+}
+@-o-keyframes swing {
+  50% {
+    transform: rotate(25deg) translateX(-15%);
+  }
 }
 @keyframes swing {
   50% {
     transform: rotate(25deg) translateX(-15%);
   }
 }
+
 #footer .fa-facebook {
+  -webkit-animation: zoom 1.1s infinite;
+  -moz-animation: zoom 1.1s infinite;
+  -o-animation: zoom 1.1s infinite;
   animation: zoom 1.1s infinite;
 }
 @keyframes zoom {
@@ -100,10 +130,48 @@
     transform: scale(1);
   }
 }
+@-webkit-keyframes zoom {
+  0%,
+  100% {
+    transform: scale(0.8);
+  }
+  50% {
+    transform: scale(1);
+  }
+}
+@-moz-keyframes zoom {
+  0%,
+  100% {
+    transform: scale(0.8);
+  }
+  50% {
+    transform: scale(1);
+  }
+}
+@-o-keyframes zoom {
+  0%,
+  100% {
+    transform: scale(0.8);
+  }
+  50% {
+    transform: scale(1);
+  }
+}
+@keyframes zoom {
+  0%,
+  100% {
+    transform: scale(0.8);
+  }
+  50% {
+    transform: scale(1);
+  }
+}
 #footer .fa-instagram {
+  -webkit-animation: shake 0.8s infinite ease-in-out;
+  -moz-animation: shake 0.8s infinite ease-in-out;
+  -o-animation: shake 0.8s infinite ease-in-out;
   animation: shake 0.8s infinite ease-in-out;
 }
-
 @keyframes shake {
   0%,
   100% {
@@ -113,9 +181,42 @@
     transform: rotate(10deg);
   }
 }
-
-/* 🔥 es ist zu viel animation in footer, ich dachte arrow kann ruhig bleiben :D aber ich habe geschreiben, just in case */
-
+@-webkit-keyframes shake {
+  0%,
+  100% {
+    transform: rotate(-10deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+}
+@-moz-keyframes shake {
+  0%,
+  100% {
+    transform: rotate(-10deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+}
+@-o-keyframes shake {
+  0%,
+  100% {
+    transform: rotate(-10deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+}
+@keyframes shake {
+  0%,
+  100% {
+    transform: rotate(-10deg);
+  }
+  50% {
+    transform: rotate(10deg);
+  }
+}
 .arrowToTopWrap {
   position: relative;
   transition: 1s ease-in;
@@ -126,19 +227,66 @@
   font-size: 2em;
   bottom: 2em;
   position: absolute;
-  animation: bottom-animation 1.5s infinite;
   color: white;
+  -webkit-animation: bottom-animation 1.5s infinite;
+  -moz-animation: bottom-animation 1.5s infinite;
+  -o-animation: bottom-animation 1.5s infinite;
+  animation: bottom-animation 1.5s infinite;
+}
+@-webkit-keyframes bottom-animation {
+  0% {
+    bottom: 0;
+    opacity: 0.1;
+  }
+  50% {
+    bottom: 20px;
+    opacity: 1;
+  }
+  100% {
+    bottom: 0;
+    opacity: 0.1;
+  }
+}
+@-moz-keyframes bottom-animation {
+  0% {
+    bottom: 0;
+    opacity: 0.1;
+  }
+  50% {
+    bottom: 20px;
+    opacity: 1;
+  }
+  100% {
+    bottom: 0;
+    opacity: 0.1;
+  }
+}
+@-o-keyframes bottom-animation {
+  0% {
+    bottom: 0;
+    opacity: 0.1;
+  }
+  50% {
+    bottom: 20px;
+    opacity: 1;
+  }
+  100% {
+    bottom: 0;
+    opacity: 0.1;
+  }
 }
 @keyframes bottom-animation {
   0% {
     bottom: 0;
+    opacity: 0.1;
   }
   50% {
     bottom: 20px;
-    opacity: 0.1;
+    opacity: 1;
   }
   100% {
     bottom: 0;
+    opacity: 0.1;
   }
 }
 
@@ -215,5 +363,14 @@
     color: white;
     font-size: 2em;
     text-decoration: none;
+  }
+  #footer .footerLinksWrap a {
+    font-size: 0.8em;
+  }
+  #footer ul li {
+    padding: 0 0.5em;
+  }
+  #footer .socialIconsWrap i {
+    font-size: 1.4em;
   }
 }
