--- a/src/Component/DetailPage.css
+++ b/src/Component/DetailPage.css
@@ -3,13 +3,17 @@
     width: 100%;
     height: 100vh;
     top: 0;
-    right: 0;
+    left: 0;
     background: #000000cc;
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 9999999;
     font-size: 20px;
+    height: 0;
+    width: 0;
+    overflow: hidden;
+    transition: .5s ease;
 }
 
 #borderPopup {
