--- a/src/Component/Hero.css
+++ b/src/Component/Hero.css
@@ -73,7 +73,7 @@
 }
 .rum .welcomeSection {
   background: linear-gradient(rgba(4, 69, 118, 0.3), rgba(64, 64, 67, 0.3)),
-    url(/RumHero3.jpg) center/cover no-repeat;
+    url(/RumHeroNEW.jpg) center/cover no-repeat;
 }
 .scotch .welcomeSection {
   background: linear-gradient(rgba(4, 69, 118, 0.1), rgba(64, 64, 67, 0.1)),
