--- a/src/Component/DetailPage.css
+++ b/src/Component/DetailPage.css
@@ -119,6 +119,11 @@
 }
 /*For Mobile landscape */
 @media (min-width:480px) and (max-width:767px)  {
+    #borderPopup{
+        width: 100vw;
+        height: 100vh;
+        overflow: scroll;
+    }
     #boxContent {
         padding: 2%;
         display: flex;
@@ -155,6 +160,9 @@
         border-radius: 0;
         background: #262B46;
         height: 100vh;
+        width: 100vw;
+        height: 100vh;
+        overflow: scroll;
     }
     #borderPopup article:nth-of-type(2) {
         padding-left: 0%;
