--- a/src/Component/Hero.css
+++ b/src/Component/Hero.css
@@ -63,31 +63,32 @@
   align-items: flex-end;
   justify-content: center;
 }
-.gin .welcomeSection {
+.hero.gin .welcomeSection {
   background: linear-gradient(rgba(4, 69, 118, 0.1), rgba(64, 64, 67, 0.1)),
     url(/GinHero.jpg) center/cover no-repeat;
 }
-.vodka .welcomeSection {
+.hero.vodka .welcomeSection {
   background: linear-gradient(rgba(4, 69, 118, 0.1), rgba(64, 64, 67, 0.1)),
     url(/VodkaHero.jpg) center/cover no-repeat;
 }
-.rum .welcomeSection {
+.hero.rum .welcomeSection {
   background: linear-gradient(rgba(4, 69, 118, 0.3), rgba(64, 64, 67, 0.3)),
     url(/RumHeroNEW.jpg) center/cover no-repeat;
 }
-.scotch .welcomeSection {
+.hero.scotch .welcomeSection {
   background: linear-gradient(rgba(4, 69, 118, 0.1), rgba(64, 64, 67, 0.1)),
     url(/ScotchHero.jpg) center/cover no-repeat;
 }
-.scotch .welcomeSection {
+.hero.scotch .welcomeSection {
   background: linear-gradient(rgba(4, 69, 118, 0.1), rgba(64, 64, 67, 0.1)),
     url(/ScotchHero.jpg) center/cover no-repeat;
 }
-.Non_Alcoholic .welcomeSection {
+.hero.Non_Alcoholic .welcomeSection {
   background: linear-gradient(rgba(4, 69, 118, 0.2), rgba(64, 64, 67, 0.2)),
     url(/nonAlkoholicHero.jpg) center/cover no-repeat;
 }
-.random .welcomeSection, .search .welcomeSection {
+.hero.random .welcomeSection,
+.hero.search .welcomeSection {
   background: linear-gradient(rgba(4, 69, 118, 0.1), rgba(64, 64, 67, 0.1)),
     url(/RandomHero.jpg) center/cover no-repeat;
 }
@@ -333,9 +334,7 @@
   .Non_Alcoholic .title h1:nth-of-type(2) {
     display: none;
   }
-  .search .title h1:nth-of-type(2) {
-    display: none;
-  }
+
   .Non_Alcoholic .title h1:nth-of-type(3) {
     display: none;
   }
@@ -345,6 +344,15 @@
     transform: none;
     -ms-transform: none;
     margin-top: 12vh;
+  }
+  .search .title h1:nth-of-type(2) {
+    display: none;
+  }
+  .search .title h1:nth-of-type(3) {
+    margin-bottom: 10vh;
+  }
+  .search .welcomeText {
+    margin-top: 10vh;
   }
 }
 
@@ -452,5 +460,17 @@
   }
   .hero .searchWrap ::placeholder {
     letter-spacing: 1px;
+  }
+  .search .title h1:nth-of-type(2) {
+    display: none;
+  }
+  .search .title h1:nth-of-type(1) {
+    margin-bottom: -5vh;
+  }
+  .search .title h1:nth-of-type(3) {
+    margin-bottom: 10vh;
+  }
+  .search .welcomeText {
+    margin-top: 10vh;
   }
 }
